--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 versionMc=1.12.2
-curseForgeId=650005
-
-modrinthId=T2cdMYjB
-modrinthVersionIC2=2.2.8.222
+versionGT=1.12.2-0.9.18-CVE
 
 versionIC2=2.8.222-ex112
 versionBuildCraft=7.99.24.8
