--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,10 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 versionMc=1.12.2
-versionGT=1.12.2-3.0.19
+curseForgeId=650005
+
+modrinthId=T2cdMYjB
+modrinthVersionIC2=2.2.8.222
 
 versionIC2=2.8.222-ex112
 versionBuildCraft=7.99.24.8
@@ -14,7 +17,7 @@ versionRF=1.12-2.1.0.7
 versionThermalFoundation=1.12.2-2.6.3.27
 versionThermalExpansion=1.12.2-5.5.4.43
 versionAE2=2747063
-versionMantle=1.12-1.3.3.55
+versionMantle=1.12-1.3.3.56
 versionTConstruct=1.12.2-2.13.0.190
 versionEnergyControl=3207144
 versionRailcraft=2687757
